# pingpong-bot

./: .envrc  .gitignore  Cargo.toml  README.md  TODO.md  plan.md
.omc/research/: dynamixel-specs.md  known-regressions-realistic-joint-speed.md  torque-derate-analysis.md
assets/fonts/: README.md
assets/robots/: competition_arm.urdf
assets/robots/4-dof/: README.md
assets/robots/4-dof/meshes/: FR05-B101_v1_1.stl  FR05-H101_v1_1.stl  FR05-H101_v1__1__1.stl  FR07-H101_v1_1.stl  FR07-H101_v1__1__1.stl  FR07-S101_v1_1.stl  FR07-S101_v1__1__1.stl  MX-28T_R_v1_1.stl  MX-28T_R_v1__1__1.stl  (+7 more)
assets/robots/custom/: README.md  robot.urdf
assets/robots/urdf-test/: README.md
config/: 4-dof.toml  default.toml  example.toml  local.example.toml  real-hardware.toml  tools.toml
crates/app/: Cargo.toml
crates/app/src/: arm.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: ballistics.rs  collision.rs  ekf.rs  error.rs  estimator.rs  impact.rs  lib.rs  physics.rs  physics_config.rs  ports.rs  rail.rs  robot.rs  triangulation.rs  types.rs
crates/infra/: Cargo.toml
crates/infra/src/: clock.rs  detector.rs  lib.rs  real_hardware.rs  robot_builder.rs  telemetry.rs
crates/infra/src/camera/: mod.rs  projection.rs  sim_camera.rs  synthetic.rs
crates/infra/src/detector/: mod.rs
crates/infra/src/estimator/: mod.rs
crates/infra/src/hardware/: mod.rs  sim.rs
crates/infra/src/robot/: builder.rs  mod.rs
crates/infra/src/robot/urdf/: arm_from_urdf.rs  fk.rs  joint_map.rs  mod.rs  mount.rs
crates/infra/src/sim/: ball_script.rs  camera.rs  controls.rs  estimator.rs  hardware.rs  mesh_loader.rs  mod.rs  panel.rs  projection.rs  rapier_convert.rs  session.rs  shooter.rs  viewer.rs  world.rs
crates/infra/src/urdf/: arm_from_urdf.rs  fk.rs  mod.rs  mount.rs
crates/infra/src/vision/: calib.rs  capture.rs  charuco.rs  detect.rs  mod.rs  opencv_tri.rs  triangulate.rs
docs/: decisions.md  measure-physics.md  phase2.md
docs/superpowers/plans/: 2026-07-17-real-hardware-dynamixel.md  2026-07-22-axl-rail.md  2026-07-22-mirror-torque-dynamics.md
docs/superpowers/specs/: 2026-07-11-dlt-sim-calibration-design.md  2026-07-17-real-hardware-dynamixel-design.md  2026-07-18-vision-pipeline-design.md  2026-07-19-calib-charuco-interactive-design.md  2026-07-22-axl-rail-design.md  2026-07-23-sim-multibody-ee-closed-loop-design.md
src/: clock.rs  config.rs  config_resolve.rs  error.rs  geometry.rs  lib.rs  local.rs  main.rs  physics_config.rs  tunables.rs
src/camera/: calibration.rs  capture.rs  charuco.rs  mod.rs  preview.rs  sim.rs  synthetic.rs  triangulate.rs
src/camera/calib/: charuco.rs  mod.rs  table_landmarks.rs  table_pnp.rs
src/camera/io/: mod.rs  preview.rs  projection.rs
src/camera/tri/: mod.rs  opencv_tri.rs  triangulate.rs
src/constants/: arm.rs  ball.rs  control.rs  estimator.rs  geometry.rs  impact.rs  mod.rs  physics.rs  table.rs  viewer.rs
src/defaults/: control.rs  estimator.rs  hardware.rs  impact.rs  mod.rs  physics.rs  planner.rs  robot.rs  vision.rs
src/detector/: bgsub.rs  candidate.rs  colormask.rs  contour.rs  dsl.rs  fuse.rs  mod.rs  params.rs  roi.rs  run_tool.rs  scorer.rs  track.rs  undistort.rs
src/detector/appearance/: cascade.rs  colormask.rs  contour.rs  mod.rs
src/detector/fuse_layer/: fuse.rs  mod.rs
src/detector/motion/: mod.rs
src/entry/: competition.rs  mod.rs
src/estimator/: ballistics.rs  ekf.rs  identify.rs  measure_video.rs  mod.rs  traj_measure.rs
src/estimator/measure/: identify.rs  mod.rs
src/hardware/: axl_ffi.rs  axl_rail.rs  dynamixel.rs  mod.rs  rail.rs  rail_stub.rs  real.rs  sim.rs
src/hardware/rail/: axl.rs  config.rs  mod.rs
src/pipeline/: mod.rs
src/planner/: bang_bang.rs  collision.rs  dynamics.rs  impact.rs  mod.rs  physics.rs  trajectory.rs
src/planner/swing/: mod.rs  physics.rs
src/robot/: builder.rs  catalog.rs  loader.rs  mod.rs  rail.rs  serial.rs  state.rs  tests.rs
src/robot/urdf/: arm_from_urdf.rs  fk.rs  mod.rs  mount.rs  visual.rs
src/sim/: arm_bodies.rs  controls.rs  debug_overlays.rs  debug_snap.rs  estimator.rs  mod.rs  panel.rs  rapier_convert.rs  session.rs  shooter.rs  viewer.rs  world.rs
src/sim/gui/: debug_overlays.rs  mod.rs  panel.rs  viewer.rs
src/sim/physics/: arm_bodies.rs  mod.rs  shooter.rs  world.rs
src/sim/session/: controls.rs  mod.rs  run.rs
src/telemetry/: mod.rs
tools/calib_charuco/: Cargo.toml  README.md
tools/calib_charuco/src/: args.rs  cli.rs  interactive.rs  main.rs
tools/calib_table_pnp/: Cargo.toml  README.md
tools/calib_table_pnp/src/: args.rs  cli.rs  interactive.rs  main.rs
tools/cam_preview/: Cargo.toml  README.md
tools/cam_preview/src/: main.rs
tools/capture_flying_ball/: Cargo.toml  README.md
tools/capture_flying_ball/src/: main.rs
tools/detect_appearance/: Cargo.toml  README.md
tools/detect_appearance/src/: cli.rs  main.rs
tools/detect_bgsub/: Cargo.toml  README.md
tools/detect_bgsub/src/: cli.rs  main.rs
tools/detect_colormask/: Cargo.toml  README.md
tools/detect_colormask/src/: main.rs
tools/detect_compare/: Cargo.toml  README.md
tools/detect_compare/src/: main.rs
tools/detect_contour/: Cargo.toml  README.md
tools/detect_contour/src/: main.rs
tools/detect_full/: Cargo.toml  README.md
tools/detect_full/src/: cli.rs  main.rs
tools/detect_roi/: Cargo.toml  README.md
tools/detect_roi/src/: main.rs
tools/jog/: Cargo.toml  README.md
tools/jog/src/: main.rs
tools/jog_axis/: Cargo.toml  README.md
tools/jog_axis/src/: main.rs
tools/jog_rail/: Cargo.toml  README.md
tools/jog_rail/src/: main.rs
tools/measure_friction/: Cargo.toml  README.md
tools/measure_friction/src/: capture_loop.rs  main.rs
tools/measure_restitution/: Cargo.toml  README.md
tools/measure_restitution/src/: capture_loop.rs  main.rs
tools/mount_search/: Cargo.toml
tools/mount_search/src/: main.rs
tools/shot_tune/: Cargo.toml
tools/shot_tune/src/: main.rs
tools/swing_bench/: Cargo.toml
tools/swing_bench/src/: main.rs
tools/tune_colormask/: Cargo.toml  README.md
tools/tune_colormask/src/: cli.rs  main.rs
(+46 files in other folders)
