[workspace]
resolver = "2"
members = ["tools/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[package]
name = "pingpong-bot"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pingpong-bot"
path = "src/main.rs"
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["dep:kiss3d", "dep:pollster", "dep:stl_io"]
real = ["dep:rustypot", "dep:serialport"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
kiss3d = { version = "0.45.0", optional = true, features = ["egui"] }
nalgebra = { version = "0.35.0", features = ["serde-serialize"] }
# 0.98.2+: Homebrew LLVM 22(libclang)와 OpenCV 4.13 조합에서 바인딩 생성 깨짐 수정
opencv = { version = "0.98.2", default-features = false, features = [
    "calib3d",
    "highgui",
    "imgproc",
    "imgcodecs",
    "objdetect",
    "videoio",
] }
pollster = { version = "0.4", optional = true }
rapier3d = "0.34.0"
rustypot = { version = "1.5.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = { version = "4.8.1", optional = true }
stl_io = { version = "0.8", optional = true }
thiserror = "2.0.18"
toml = "0.8"
toml_edit = "0.22.27"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urdf-rs = "0.9.0"
