[workspace]
resolver = "2"
members = ["tools/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[package]
name = "pingpong-bot"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pingpong-bot"
path = "src/main.rs"
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["dep:kiss3d", "dep:pollster", "dep:stl_io"]
real = ["dep:rustypot", "dep:serialport", "dep:libloading"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
kiss3d = { version = "0.45.0", optional = true, features = ["egui"] }
nalgebra = { version = "0.35.0", features = ["serde-serialize"] }
# 0.98.2+: Homebrew LLVM 22(libclang)와 OpenCV 4.13 조합에서 바인딩 생성 깨짐 수정
opencv = { version = "0.98.2", default-features = false, features = [
    "calib3d",
    "highgui",
    "imgproc",
    "imgcodecs",
    "objdetect",
    "videoio",
] }
pollster = { version = "0.4", optional = true }
rapier3d = "0.34.0"
rustypot = { version = "1.5.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = { version = "4.8.1", optional = true }
stl_io = { version = "0.8", optional = true }
thiserror = "2.0.18"
toml = "0.8"
toml_edit = "0.22.27"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urdf-rs = "0.9.0"

[target.'cfg(windows)'.dependencies]
libloading = { version = "0.8", optional = true }

# 물리(rapier3d/parry3d)·기구학(nalgebra 기반 Arm FK/IK, planner) 모두 opt-level=0
# 이면 발사 순간(공 dynamic+CCD 전환, 동시에 plan_swing IK·충돌 샘플링 커밋)에
# 스텝당 십수 ms까지 튀어 `SimWorld::step`이 물리 스레드 뮤텍스를 오래 잡고, GUI
# 렌더 루프(`try_lock`)가 멈춰 보이는 문제가 생긴다. 의존성은 확실히 최적화하고
# (opt-level=3), 우리 크레이트 자체(FK/IK/plan_swing)도 가벼운 최적화(opt-level=1)를
# 줘야 이 스파이크가 잡힌다 — 반복 컴파일 속도는 opt-level=3보다 덜 희생된다.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
