[package]
name = "pingpong-infra"
edition.workspace = true
version.workspace = true

[features]
default = ["sim"]
sim = []
gui = ["dep:kiss3d", "dep:pollster", "dep:stl_io"]
real = []

[dependencies]
pingpong-domain = { version = "0.1.0", path = "../domain" }
rapier3d = "0.34.0"
thiserror = "2.0.18"
tracing = "0.1.44"
kiss3d = { version = "0.45.0", optional = true, features = ["egui"] }
pollster = { version = "0.4", optional = true }
urdf-rs = "0.9.0"
nalgebra = "0.35.0"
stl_io = { version = "0.8", optional = true }
