[package]
name = "pingpong-infra"
edition.workspace = true
version.workspace = true

[features]
default = ["sim"]
sim = []
gui = ["dep:kiss3d", "dep:pollster", "dep:stl_io"]
real = []
# 시스템 OpenCV + libclang 필요. CI 기본 빌드는 끄고 nalgebra DLT 폴백 사용.
opencv = ["dep:opencv"]

[dependencies]
pingpong-domain = { version = "0.1.0", path = "../domain" }
rapier3d = "0.34.0"
thiserror = "2.0.18"
tracing = "0.1.44"
kiss3d = { version = "0.45.0", optional = true, features = ["egui"] }
pollster = { version = "0.4", optional = true }
urdf-rs = "0.9.0"
nalgebra = { version = "0.35.0", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
stl_io = { version = "0.8", optional = true }
opencv = { version = "0.94", optional = true, default-features = false, features = [
    "calib3d",
    "imgproc",
    "imgcodecs",
    "objdetect",
    "videoio",
] }
