[package]
name = "calib-charuco"
edition.workspace = true
version.workspace = true

[[bin]]
name = "calib_charuco"
path = "src/main.rs"

[features]
default = []
opencv = ["pingpong-infra/opencv"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
pingpong-infra = { version = "0.1.0", path = "../../crates/infra" }
serde_json = "1.0"
