[package]
name = "capture-flying-ball"
edition.workspace = true
version.workspace = true

[[bin]]
name = "capture_flying_ball"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
pingpong-domain = { version = "0.1.0", path = "../../crates/domain" }
pingpong-infra = { version = "0.1.0", path = "../../crates/infra" }
