[package]
name = "jog-rail"
edition.workspace = true
version.workspace = true

[[bin]]
name = "jog_rail"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
pingpong-bot = { path = "../..", default-features = false, features = ["real"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
