[package]
name = "measure-friction"
edition.workspace = true
version.workspace = true

[[bin]]
name = "measure_friction"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
pingpong-bot = { path = "../..", default-features = false, features = ["sim"] }
