[package]
name = "measure-friction"
edition.workspace = true
version.workspace = true

[[bin]]
name = "measure_friction"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
opencv = { version = "0.98.2", default-features = false, features = ["imgproc"] }
serde_json = "1.0"
pingpong-bot = { path = "../..", default-features = false }
