[package]
name = "measure-restitution"
edition.workspace = true
version.workspace = true

[[bin]]
name = "measure_restitution"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
nalgebra = "0.35.0"
pingpong-domain = { version = "0.1.0", path = "../../crates/domain" }
pingpong-infra = { version = "0.1.0", path = "../../crates/infra" }
