[package]
name = "tune-colormask"
edition.workspace = true
version.workspace = true

[[bin]]
name = "tune_colormask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
opencv = { version = "0.98.2", default-features = false, features = [
    "highgui",
    "imgproc",
    "imgcodecs",
] }
pingpong-bot = { path = "../..", default-features = false }
